[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = "1"
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
tokio-stream =  "0.1"
tracing = "0.1.34"
